# no-frontend

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
app/: pyproject.toml  settings.py
app/accounts/: models.py
app/accounts/migrations/: 0001_initial.py
app/main/: urls.py  views.py  wsgi.py
app/notes/: models.py  urls.py  views.py
app/notes/migrations/: 0001_initial.py
app/static/css/: styles.css
app/templates/: app.html  base.html
app/templates/notes/: note_confirm_delete.html  notes_detail.html  notes_list.html
app/templates/registration/: login.html
